@@ -3,11 +3,14 @@ package com.theairebellion.zeus.api.extensions;
 import com.theairebellion.zeus.api.annotations.AuthenticateViaApiAs;
 import com.theairebellion.zeus.api.authentication.BaseAuthenticationClient;
 import com.theairebellion.zeus.api.authentication.Credentials;
+import com.theairebellion.zeus.api.log.LogApi;
 import com.theairebellion.zeus.api.service.fluent.RestServiceFluent;
 import com.theairebellion.zeus.api.service.fluent.SuperRestServiceFluent;
+import com.theairebellion.zeus.framework.allure.CustomAllureListener;
 import com.theairebellion.zeus.framework.decorators.DecoratorsFactory;
 import com.theairebellion.zeus.framework.quest.SuperQuest;
 import com.theairebellion.zeus.framework.storage.StoreKeys;
+import org.junit.jupiter.api.extension.AfterTestExecutionCallback;
 import org.junit.jupiter.api.extension.BeforeTestExecutionCallback;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.springframework.context.ApplicationContext;
@@ -19,10 +22,25 @@ import java.util.List;
 import java.util.function.Consumer;
 
 import static com.theairebellion.zeus.api.storage.StorageKeysApi.*;
+import static com.theairebellion.zeus.framework.allure.StepType.PERFORMING_PRE_QUEST_AUTHENTICATION;
 
-public class ApiTestExtension implements BeforeTestExecutionCallback {
+/**
+ * Handles API authentication for test execution.
+ * <p>
+ * This JUnit 5 extension processes the {@link AuthenticateViaApiAs} annotation
+ * to authenticate users before API tests.
+ * </p>
+ *
+ * @author Cyborg Code Syndicate
+ */
+public class ApiTestExtension implements BeforeTestExecutionCallback, AfterTestExecutionCallback {
 
-
+    /**
+     * Executes authentication before test execution.
+     *
+     * @param context The test execution context.
+     * @throws Exception If authentication fails.
+     */
     @Override
     public void beforeTestExecution(final ExtensionContext context) throws Exception {
         context.getTestMethod()
@@ -30,11 +48,19 @@ public class ApiTestExtension implements BeforeTestExecutionCallback {
                 .ifPresent(annotation -> handleAuthentication(context, annotation));
     }
 
+    /**
+     * Executes post-test cleanup after test execution.
+     *
+     * @param context The test execution context.
+     */
+    @Override
+    public void afterTestExecution(final ExtensionContext context) {
+        CustomAllureListener.stopParentStep();
+    }
+
     private void handleAuthentication(final ExtensionContext context, final AuthenticateViaApiAs annotation) {
         try {
-            Credentials credentials = annotation.credentials()
-                    .getDeclaredConstructor()
-                    .newInstance();
+            Credentials credentials = annotation.credentials().getDeclaredConstructor().newInstance();
             ApplicationContext appCtx = SpringExtension.getApplicationContext(context);
             DecoratorsFactory decoratorsFactory = appCtx.getBean(DecoratorsFactory.class);
 
@@ -47,10 +73,8 @@ public class ApiTestExtension implements BeforeTestExecutionCallback {
 
             addConsumerToStore(context, questConsumer);
 
-        } catch (InstantiationException
-                 | IllegalAccessException
-                 | InvocationTargetException
-                 | NoSuchMethodException e) {
+        } catch (InstantiationException | IllegalAccessException | InvocationTargetException |
+                 NoSuchMethodException e) {
             throw new IllegalStateException("Failed to instantiate credentials.", e);
         }
     }
@@ -59,15 +83,18 @@ public class ApiTestExtension implements BeforeTestExecutionCallback {
                                                      final String password,
                                                      final Class<? extends BaseAuthenticationClient> clientType,
                                                      final boolean cacheCredentials) {
+        CustomAllureListener.startParentStep(PERFORMING_PRE_QUEST_AUTHENTICATION);
         return (SuperQuest quest) -> {
             quest.getStorage().sub(API).put(USERNAME, username);
             quest.getStorage().sub(API).put(PASSWORD, password);
 
+            LogApi.extended("Updated quest storage with credentials for username: {}", username);
             RestServiceFluent restServiceFluent = quest.enters(RestServiceFluent.class);
             SuperRestServiceFluent superRestServiceFluent =
                     decoratorsFactory.decorate(restServiceFluent, SuperRestServiceFluent.class);
             superRestServiceFluent.getRestService().setCacheAuthentication(cacheCredentials);
             restServiceFluent.authenticate(username, password, clientType);
+            CustomAllureListener.stopParentStep();
         };
     }
 
@@ -79,5 +106,4 @@ public class ApiTestExtension implements BeforeTestExecutionCallback {
 
         consumers.add(questConsumer);
     }
-
 }
